<resources>
    <string name="app_name">goFarm</string>
    <string name="expand">GoFarm is a perfect solution which offer end to end agriculture services to Indian farmers with an aim to improve the efficiencies of agriculture value chain.\nGoFarm connects farmers all over India to their various needs – Seeds, fertilizers, equipment, crop advisory, bank loans, government schemes and market linkage through a wide network of trained micro entrepreneurs.</string>
    <string name="google_maps_key">AIzaSyAYvwVkxN9YDhgqDgZNHCirefnpLPHSfoU</string>
    <string-array name="select">
        <item>Select User</item>
        <item>Farmer</item>
        <item>Trader</item>
    </string-array>
    <string-array name="city">
        <item>Select City</item>
        <item>Pune</item>
        <item>Nashik</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
        <item>Aurangabad</item>
    </string-array>
    <string name="crop">Crop</string>
    <string-array name="market">
        <item>Select Market Yard</item>
        <item>Lasalgaon</item>
        <item>Pune Kothrud</item>
        <item>Pimpri</item>
    </string-array>
    <string-array name="bank">
        <item>Select Bank</item>
        <item>HDFC Bank</item>
        <item>State Bank Of India</item>
        <item>Axis Bank</item>
        <item>Union Bank Of India</item>
        <item>Apply For All Banks</item>
    </string-array>
    <string-array name="bank1">
        <item>Select Bank</item>
        <item>HDFC Bank</item>
        <item>State Bank Of India</item>
        <item>Axis Bank</item>
        <item>Union Bank Of India</item>
    </string-array>
    <string-array name="scheme_cat">
        <item>Select Category</item>
        <item>Show All</item>
        <item>Breeding</item>
        <item>Credit Card</item>
        <item>Crop Insurance</item>
        <item>Irrigation</item>
        <item>Soil Health</item>
    </string-array>
    <string-array name="schemes">
        <item>Select Scheme</item>
        <item>KCC</item>
        <item>PMFBY</item>
        <item>PMKSY</item>
        <item>RGM</item>
        <item>SHCS</item>

    </string-array>
    <string-array name="lang">
        <item>English</item>
        <item>हिंदी</item>
        <item>मराठी</item>
    </string-array>
    <string name="pmfby_object">Pradhan Mantri Fasal Bima Yojana (PMFBY) aims at supporting sustainable production in agriculture sector by way of - \n
a) Providing financial support to farmers suffering crop loss/damage arising out of unforeseen events\n
b) Stabilizing the income of farmers to ensure their continuance in farming\n
c) Encouraging farmers to adopt innovative and modern agricultural practices\n
d) Ensuring flow of credit to the agriculture sector; which will contribute to food security, crop diversification and enhancing growth and competitiveness of agriculture sector besides protecting farmers from production risks.
</string>
    <string name="pmfby_head">The PMFBY was launched in 2016 and replaces all the prevailing yield insurance schemes in India. The scheme has been launched with an impetus on crop sector.\n The scheme has extended coverage under localized risks, post-harvest losses etc. and aims at adoption of technology for the purpose of yield estimation. Through increased farmer awareness and low farmer premium rates the scheme aims at increasing the crop insurance penetration in India.</string>
    <string name="pmfby_link">https://pmfby.gov.in/</string>
    <string name="pmsky_head">Launched on 1st July, 2015 with the motto of "Har Khet Ko Paani", the Pradhan Mantri Krishi Sinchayee Yojana (PMKSY) is being implemented to expand cultivated area with assured irrigation, reduce wastage of water and improve water use efficiency.\nPMKSY not only focuses on creating sources for assured irrigation, but also creating protective irrigation by harnessing rain water at micro level through "Jal Sanchay" and "Jal Sinchan". Micro irrigation is also incentivized through subsidy to ensure "Per drop-More crop".
PMKSY will be supervised and monitored by an Inter-Ministerial National Steering Committee (NSC) will be constituted under the Chairmanship of Prime Minister with Union Ministers from concerned Ministries. A National Executive Committee (NEC) will be constituted under the Chairmanship of Vice Chairman, NITI Aayog to oversee programme implementation, allocation of resources, inter ministerial coordination, monitoring and performance assessment, addressing administrative issues etc.
</string>
    <string name="pmksy_object">•	Achieve convergence of investments in irrigation at the field level (preparation of district level and, if required, sub district level water use plans).\n
•	Enhance the physical access of water on the farm and expand cultivable area under assured irrigation (Har Khet Ko Pani).\n
•	Integration of water source, distribution and its efficient use, to make best use of water through appropriate technologies and practices.\n
•	Improve on - farm water use efficiency to reduce wastage and increase availability both in duration and extent.\n
•	Enhance the adoption of precision - irrigation and other water saving technologies (More Crop Per Drop).\n
•	Enhance recharge of aquifers and introduce sustainable water conservation practices.\n
•	Ensure the integrated development of rainfed areas using the watershed approach towards soil and water conservation, regeneration of ground water, arresting runoff, providing livelihood options and other NRM activities.\n
•	Promote extension activities relating to water harvesting, water management and crop alignment for farmers and grass root level field functionaries. \n
•	Explore the feasibility of reusing treated municipal waste water for peri-urban agriculture.\n
</string>
    <string name="pmksy_link">https://pmksy.gov.in/</string>
    <string name="kcc_head">This scheme was launched to provide timely and adequate credit to farmers to meet their production credit needs (cultivation expenses) besides meeting contingency expenses, and expenses related to ancillary activities through simplified procedure facilitating availment of the loans as and when needed.</string>
    <string name="kcc_object">The scheme aims at providing adequate and timely cred it for the comprehensive credit requirements of farmers under single window for their cultivation and other needs as indicated below:\n
•	To meet the short term credit requirements for cultivation of crops\n
•	Post harvest expenses \n
•	Produce Marketing loan \n
•	Consumption requirements of farmer household\n
•	Working capital for maintenance of farm assets, activities allied to agriculture, like dairy animals, inland fishery and also working capital required for floriculture, horticulture etc.\n
•	Investment credit requirement for agriculture and allied activities like pump sets, sprayers, dairy animals, floriculture, horticulture etc\n
•	Short term credit requirements of rearing of animals, birds, fish, shrimp, other aquatic organisms, capture of fish.\n
</string>
    <string name="kcc_link">https://www.sbi.co.in/portal/web/agriculture-banking/kcc</string>
    <string name="rgm_head">Rashtriya Gokul Mission (RGM) has been launched in December 2014 with an outlay of Rs 2025 crore for development and conservation of indigenous breeds through selective breeding in the breeding tract and genetic upgradation of nondescript bovine population.\n The scheme comprises of two components namely National Programme for Bovine Breeding (NPBB) and National Mission on Bovine Productivity (NMBP).</string>
    <string name="rgm_object">➢ Development and conservation of indigenous breeds.\n➢ Breed improvement programme for indigenous breeds so as to improve the genetic makeup and increase the stock\n➢ Enhancing milk  production and productivity of bovine population by increasing disease free high genetic merit female population and  check on spread of diseases\n➢ Upgrading nondescript cattle using elite indigenous breeds like Gir, Sahiwal, Rathi, Deoni, Tharparkar,  Red Sindhi\n➢   Distribution of disease free high genetic merit bulls for natural service\n➢ To bring all breedable females under organised breeding through AI or natural service using germ plasm of high genetic merits\n➢ To arrange quality Artificial Insemination (AI) services at farmers’ doorstep\n➢ To create e-market portal for bovine germplasm for connecting breeders and farmers
\n➢ To increase trade of livestock and livestock products by meeting out sanitary and phyto sanitary (SPS) issues\n➢ To select breeding bulls of high genetic merit at a young age through application of genomics.
</string>
    <string name="rgm_link">http://dahd.nic.in/rashtriya-gokul-mission</string>
    <string name="shcs_head">A Soil Health Card is used to assess the current status of soil health and, when used over time, to determine changes in soil health that are affected by land management.\n A Soil Health Card displays soil health indicators and associated descriptive terms. The indicators are typically based on farmers\' practical experience and knowledge of local natural resources. The card lists soil health indicators that can be assessed without the aid of technical or laboratory equipment.\n
    Soil Health Card (SHC) is a Government of India\'s scheme promoted by the Department of Agriculture and Co-operation under the Ministry of Agriculture and Farmers\' Welfare. It is being implemented through the Department of Agriculture of all the State and Union Territory Governments.
    Soil Health Card Scheme is a very beneficial scheme for farmers. There are many farmers in India. And they do not know which types of crops they should grow to get maximum yield. Basically, they do not know the quality and the type of their soil. They might know by experience what crops grow and what crops fail. But they don\'t know what they can do to improve the condition of the soil.
</string>
    <string name="title">goFarm</string>
    <string name="tagline">Now farm smart with go farm...</string>
    <string name="load">Loading...</string>
    <string name="submit">Submit</string>
    <string name="reg_name">Enter Name</string>
    <string name="reg_phn">Enter Contact Number</string>
    <string name="fdash_loan">Bank Loans</string>
    <string name="loansub">Application Successfully Submited</string>
    <string name="loan_sb">Select Bank</string>
    <string name="loan_namepan">ENTER NAME AS PER PAN</string>
    <string name="dob_pan">ENTER D.O.B AS PER PAN</string>
    <string name="dob_Select">Select D.O.B</string>
    <string name="phn_pan">ENTER CONTACT REGISTERED WITH PAN</string>
    <string name="pan">ENTER PAN NUMBER</string>
    <string name="mpan">Enter PAN number</string>
    <string name="mincome">ENTER MONTHLY INCOME</string>
    <string name="income">Enter monthly income</string>
    <string name="mmonths">ENTER AMOUNT OF LOAN YOU WANT</string>
    <string name="months">Enter amount of loan</string>
    <string name="period">ENTER PERIOD FOR LOAN IN MONTH\'S</string>
    <string name="mperiod">Enter period for loan</string>
</resources>