<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".FDash_Loans">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aa212121"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bank_back"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#aa212121"
                android:drawableLeft="@drawable/back"
                android:fontFamily="@font/avenir_light"
                android:gravity="center"
                android:paddingRight="25dp"
                android:text="@string/fdash_loan"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/bank_head" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/loancheck"
                android:fontFamily="@font/avenir55_roman"
                android:gravity="center|center_vertical"
                android:text="@string/loansub"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bank_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/upper"
                android:fontFamily="@font/avenir55_roman"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="TextView"
                android:textColor="#424242"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/bank_m1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/lower"
                android:fontFamily="@font/avenir55_roman"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="TextView"
                android:textColor="#424242"
                android:textSize="14sp" />

            <ScrollView
                android:id="@+id/bank_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bank_msbank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/loan_sb"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <Spinner
                        android:id="@+id/bank_sbank"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:popupBackground="@drawable/my_drop_down" />

                    <TextView
                        android:id="@+id/bank_mname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/loan_namepan"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/reg_name"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mdob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/dob_pan"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <TextView
                        android:id="@+id/bank_dob"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:fontFamily="@font/avenir55_roman"
                        android:gravity="left|center_vertical"
                        android:text="@string/dob_Select"
                        android:textColor="#616161"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mphn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/phn_pan"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_phn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/reg_phn"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mpan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/pan"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_pan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/mpan"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mincome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/mincome"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_income"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/income"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/mmonths"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_amount"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/months"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bank_mperiod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:fontFamily="@font/avenir55_roman"
                        android:text="@string/period"
                        android:textAllCaps="true"
                        android:textColor="#e9e9e9"
                        android:textSize="9sp" />

                    <EditText
                        android:id="@+id/bank_period"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/my_spinner"
                        android:ems="10"
                        android:fontFamily="@font/avenir55_roman"
                        android:hint="@string/mperiod"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="#616161"
                        android:textCursorDrawable="@drawable/cursor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bank_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/submit"
                        android:fontFamily="@font/avenir55_roman"
                        android:onClick="onLoanSubmit"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>