<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aa212121"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/billabong"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/title"
                android:textColor="#e1e1e1"
                android:textSize="70sp" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/helvetica_light45"
                android:text="@string/tagline"
                android:textColor="#e1e1e1"
                android:textSize="16sp" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/load"
                style="@style/SpinKitView.FadingCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                app:SpinKit_Color="@color/colorAccent" />

            <TextView
                android:id="@+id/load_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/avenir55_roman"
                android:gravity="center"
                android:text="@string/load"
                android:textColor="#e1e1e1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>